[package]
name = "push-service"
version = "0.1.0"
edition = "2021"

[lib]
lib = ["src/lib.rs"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = { version = "4.4.0", features = ["rustls", "rustls-0_21"] }
base64 = "0.21.4"
base64ct = "1.6.0"
bincode = "1.3.3"
hyper = { version = "0.14.27", features = ["full"] }
hyper-rustls = "0.24.1"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["rustls", "gzip", "json", "serde_json"] }
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
secp256k1 = { version = "0.28.0", features = ["rand", "serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
web-push-native = "0.3.0"
