[package]
name = "push-service"
version = "0.1.0"
edition = "2021"

[lib]
lib = ["src/lib.rs"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = { version = "4.4.0", features = ["rustls", "rustls-0_21"] }
base64ct = "1.6.0"
hyper = { version = "0.14.27", features = ["full"] }
hyper-rustls = "0.24.1"
jsonwebtoken = "8.3.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
rand = "0.8.5"
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
uuid = { version = "1.5.0", features = ["v4"] }
web-push-native = "0.3.0"
